--- a/assignment3/Gemfile
+++ b/assignment3/Gemfile
@@ -7,6 +7,7 @@ ruby '2.7.1'
 gem 'rails', '~> 6.0.3', '>= 6.0.3.2'
 # Use sqlite3 as the database for Active Record
 gem 'bcrypt', '3.1.13'
+gem 'rails-controller-testing'
 # Use Puma as the app server
 gem 'puma', '~> 4.1'
 # Use SCSS for stylesheets
