--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,3 +1,5 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-
+paula:
+  name: paula pol
+  email: polpaula6@gmail.com
+  password_digest: <%= User.digest('password')%>
